<resources>
    <string name="app_name">trevel_Russia_Yandex_App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_point">Create point</string>
    <string name="point_title">Point title</string>
    <string name="point_content">Point content</string>
    <string name="create">Create</string>
    <string name="back">Back</string>
    <string name="button_mylocation">Button_myLocation</string>
    <string name="button_list">Button_list</string>
</resources>